Injecting DB settings via ENV